--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.3
+Django==1.6
 Pillow==1.7.2
 South==0.7.3
 django-registration==0.7
@@ -6,3 +6,5 @@ django-taggit==0.9.3
 wsgiref==0.1.2
 django-cities
 django-image-cropping
+django-taggit
+simplejson==1.9.3
