--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,68 @@
-Django==1.5b2
-Pillow==1.7.2
+Beaker==1.6.4
+BitTorrent==4.4.0
+Django==1.5.1
+Mako==0.7.3
+MarkupSafe==0.15
+PIL==1.1.7
+PyPAM==0.5.0
+Pygments==1.5
+Shapely==1.2.16
 South==0.7.3
+Twisted==12.3.0
+amqp==1.2.0
+anyjson==0.3.3
+billiard==2.7.3.28
+celery==3.0.11
+celerymon==1.0.3
+chardet==2.1.1
+cl==0.0.3
+ctypes==1.0.2
+cupshelpers==1.0
+deluge==1.3.5
+distribute==0.6.31
+django-celery==3.0.11
+django-cities==0.2
+django-facebook==5.0.12
+django-filter==0.6
+django-guardian==1.1.0.beta
+django-image-cropping==0.6.4
+django-phonenumber-field==0.2a3
+django-picklefield==0.3.0
 django-registration==0.7
 django-taggit==0.9.3
-wsgiref==0.1.2
-django-cities
-django-image-cropping
-django-taggit
+django-userena==1.2.0
+djorm-ext-pgfulltext==0.8
+docutils==0.9
+dulwich==0.8.6
+easy-thumbnails==1.2
+geopy==0.94.2
+hg-git==0.3.4
+hgview==1.7.0
+ipython==0.13.1
+kombu==2.5.4
+mercurial==2.4.2
+numpy==1.6.2
+phonenumbers==5.4b1
+psycopg2==2.4.5
+pyOpenSSL==0.13
+pycups==1.9.61
+pycurl==7.19.0
+pygame==1.9.1release
+pygobject==3.4.2
+pyinotify==0.9.4
+pyserial==2.5
+pysmbc==1.0.13
+python-dateutil==2.1
+python-libtorrent==0.15.10
+pytz==2012c
+pyudev==0.16.1
+pyxdg==0.25
+pyzmq==2.1.11
 simplejson==1.9.3
+six==1.2.0
+synaptiks==0.8.1
+tornado==2.4.1
+urwid==1.1.1
+virtualenv==1.8.4
+wsgiref==0.1.2
+zope.interface==4.0.3
