--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ simplejson==1.9.3
 twilio
 django-money
 py-moneyed
-#django-localflavor-ca
+django-localflavor==1.0
 django-selectable
 django-userena
 easy-thumbnails
